--- a/CloudService/CloudService/Views/HomeHeaderView.xib
+++ b/CloudService/CloudService/Views/HomeHeaderView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15A2301" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1605" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
@@ -10,20 +10,24 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionReusableView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="U6b-Vx-4bR" customClass="HomeHeaderView">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="250"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="240"/>
             <autoresizingMask key="autoresizingMask"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PJC-bM-IIT">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="137"/>
-                    <color key="backgroundColor" red="0.14117647059999999" green="0.49803921569999998" blue="0.85098039219999999" alpha="1" colorSpace="calibratedRGB"/>
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="165"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="PJC-bM-IIT" secondAttribute="height" multiplier="7:3" id="xhv-s4-cdb"/>
                     </constraints>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="xhv-s4-cdb"/>
+                        </mask>
+                    </variation>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2cp-iw-sPn">
-                    <rect key="frame" x="0.0" y="137" width="320" height="63"/>
+                    <rect key="frame" x="0.0" y="165" width="320" height="75"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="张三" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tjf-id-eE3">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="张三" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tjf-id-eE3">
                             <rect key="frame" x="88" y="10" width="80" height="21"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="21" id="KrK-dE-NKz"/>
@@ -40,7 +44,7 @@
                                 </mask>
                             </variation>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="欢迎你！" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="waJ-bX-2QI">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="欢迎你！" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="waJ-bX-2QI">
                             <rect key="frame" x="168" y="10" width="80" height="21"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="80" id="5Qi-iV-GDS"/>
@@ -50,7 +54,7 @@
                             <color key="textColor" red="0.2239188762626263" green="0.2239188762626263" blue="0.2239188762626263" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="我的积分：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0DF-dH-dHA">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="我的积分：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0DF-dH-dHA">
                             <rect key="frame" x="88" y="39" width="70" height="21"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="70" id="3Jk-f8-bYx"/>
@@ -70,7 +74,7 @@
                                 </mask>
                             </variation>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="120" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AKQ-wc-bsR">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="120" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AKQ-wc-bsR">
                             <rect key="frame" x="158" y="39" width="90" height="21"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="42" id="X9g-86-SaQ"/>
@@ -84,7 +88,7 @@
                                 </mask>
                             </variation>
                         </label>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NuD-9f-8p3">
+                        <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NuD-9f-8p3">
                             <rect key="frame" x="235" y="16" width="80" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="80" id="fSc-jx-H1n"/>
@@ -96,7 +100,7 @@
                             <state key="selected" title="已签到" backgroundImage="home-icon7_"/>
                             <state key="highlighted" backgroundImage="home-icon7_"/>
                         </button>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="head1" translatesAutoresizingMaskIntoConstraints="NO" id="rBZ-u0-D07">
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="head1" translatesAutoresizingMaskIntoConstraints="NO" id="rBZ-u0-D07">
                             <rect key="frame" x="30" y="10" width="43" height="43"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="rBZ-u0-D07" secondAttribute="height" id="lfS-ux-kxU"/>
@@ -113,6 +117,7 @@
                         <constraint firstItem="0DF-dH-dHA" firstAttribute="leading" secondItem="rBZ-u0-D07" secondAttribute="trailing" constant="8" id="JDJ-zZ-iL9"/>
                         <constraint firstAttribute="trailing" secondItem="NuD-9f-8p3" secondAttribute="trailing" constant="5" id="JTp-0H-AM4"/>
                         <constraint firstItem="waJ-bX-2QI" firstAttribute="top" secondItem="Tjf-id-eE3" secondAttribute="top" id="KyS-4A-1BA"/>
+                        <constraint firstAttribute="height" constant="75" id="Ojs-NB-8j5"/>
                         <constraint firstItem="waJ-bX-2QI" firstAttribute="leading" secondItem="Tjf-id-eE3" secondAttribute="trailing" id="W62-eh-rWj"/>
                         <constraint firstItem="waJ-bX-2QI" firstAttribute="width" secondItem="Tjf-id-eE3" secondAttribute="width" id="WV5-rL-JcP"/>
                         <constraint firstItem="NuD-9f-8p3" firstAttribute="centerY" secondItem="2cp-iw-sPn" secondAttribute="centerY" id="Wfn-b5-IyR"/>
@@ -134,16 +139,20 @@
             <constraints>
                 <constraint firstItem="2cp-iw-sPn" firstAttribute="height" secondItem="PJC-bM-IIT" secondAttribute="height" multiplier="5:11" id="BQf-fS-R2G"/>
                 <constraint firstItem="PJC-bM-IIT" firstAttribute="top" secondItem="U6b-Vx-4bR" secondAttribute="top" id="MvI-fx-MYF"/>
+                <constraint firstItem="PJC-bM-IIT" firstAttribute="height" secondItem="U6b-Vx-4bR" secondAttribute="height" multiplier="17:24" id="O2s-sx-0jb"/>
                 <constraint firstAttribute="trailing" secondItem="PJC-bM-IIT" secondAttribute="trailing" id="Qdc-c9-9lI"/>
                 <constraint firstItem="2cp-iw-sPn" firstAttribute="leading" secondItem="U6b-Vx-4bR" secondAttribute="leading" id="Vdn-DS-V2i"/>
                 <constraint firstItem="2cp-iw-sPn" firstAttribute="top" secondItem="PJC-bM-IIT" secondAttribute="bottom" id="Wst-ae-LdL"/>
                 <constraint firstItem="PJC-bM-IIT" firstAttribute="leading" secondItem="U6b-Vx-4bR" secondAttribute="leading" id="hY7-zm-85g"/>
                 <constraint firstAttribute="trailing" secondItem="2cp-iw-sPn" secondAttribute="trailing" id="rTa-hU-cA5"/>
+                <constraint firstAttribute="bottom" secondItem="2cp-iw-sPn" secondAttribute="bottom" id="vAB-pc-7AV"/>
                 <constraint firstItem="PJC-bM-IIT" firstAttribute="height" secondItem="U6b-Vx-4bR" secondAttribute="height" multiplier="11:16" id="wGD-sg-RCW"/>
             </constraints>
             <variation key="default">
                 <mask key="constraints">
+                    <exclude reference="O2s-sx-0jb"/>
                     <exclude reference="wGD-sg-RCW"/>
+                    <exclude reference="BQf-fS-R2G"/>
                 </mask>
             </variation>
             <connections>
@@ -153,7 +162,7 @@
                 <outlet property="sginBtn" destination="NuD-9f-8p3" id="95P-DR-FuE"/>
                 <outlet property="userNameLabel" destination="Tjf-id-eE3" id="XS3-Br-Sft"/>
             </connections>
-            <point key="canvasLocation" x="323" y="358"/>
+            <point key="canvasLocation" x="378" y="354"/>
         </collectionReusableView>
     </objects>
     <resources>
